--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "express": "^4.16.2",
-    "node-fetch": "^1.7.3"
+    "express": "^4.16.2"
   },
   "devDependencies": {
-    "nodemon": "^1.14.8"
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.0.1"
   }
 }
